--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
   "bracketSpacing": false,
   "semi": true,
   "experimentalTernaries": false,
-  "singleQuote": false,
+  "singleQuote": true,
   "jsxSingleQuote": false,
   "quoteProps": "as-needed",
   "trailingComma": "all",
